recup values from form , image de fond, display prediction result in the page footer

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,5 +3,6 @@
 <div class="banner">
         <h1>Prédiction de Survie sur le Titanic</h1>
         <p>Découvrez si vous auriez survécu au naufrage du Titanic!!</p>
+        <a href="form" class="cta-button">Commencer la prediction </a>
 </div>
 {% endblock %}
