--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,6 +9,8 @@
     {%else%}
         <title>Titanic - Result</title>  
     {%endif%}
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
 </head>
 
 <body>
